# Fuel_statistic

./: pyproject.toml
fuel/fuel/: asgi.py  settings.py  urls.py  wsgi.py
fuel/statistic/: models.py
